{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 90,
  "lineage": "19ef8306-caaf-b941-14ea-1070045cdbed",
  "resources": [
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/appserver-lb/1ba68f6bc32ecc7f",
            "arn_suffix": "app/appserver-lb/1ba68f6bc32ecc7f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "appserver-lb-1101408769.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/appserver-lb/1ba68f6bc32ecc7f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "appserver-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f9f3a28a0645e6cb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ddee619789c4da7d"
              },
              {
                "subnet_id": "subnet-0f907c72667c5de1b"
              }
            ],
            "subnets": [
              "subnet-0ddee619789c4da7d",
              "subnet-0f907c72667c5de1b"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-051d33c1a610f8534",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/appserver-lb/1ba68f6bc32ecc7f/8c6434a4a5a1ecd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/appserverTG/646e107fd91c2900",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/appserver-lb/1ba68f6bc32ecc7f/8c6434a4a5a1ecd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/appserver-lb/1ba68f6bc32ecc7f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appserver_elb.aws_lb.backend_lb",
            "module.appserver_elb.aws_lb_target_group.appserverTG",
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "appserverTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/appserverTG/646e107fd91c2900",
            "arn_suffix": "targetgroup/appserverTG/646e107fd91c2900",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/appserverTG/646e107fd91c2900",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/appserver-lb/1ba68f6bc32ecc7f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "appserverTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appserver_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-0f9f3a28a0645e6cb",
            "description": "allow traffic from port 80 \u0026 allow all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to app servers",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0414447227cdd0e65"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9f3a28a0645e6cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow from the Web instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0987b452d0db59690"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "appserver_elb_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserver_elb_sg"
            },
            "tags_all": {
              "Name": "appserver_elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to app servers",
            "from_port": 0,
            "id": "sgrule-1673982236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9f3a28a0645e6cb",
            "security_group_rule_id": "sgr-0a59e6a6b787f2c49",
            "self": false,
            "source_security_group_id": "sg-0414447227cdd0e65",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.appserver_elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow from the Web instances",
            "from_port": 0,
            "id": "sgrule-722463584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9f3a28a0645e6cb",
            "security_group_rule_id": "sgr-0c6ace599c95c2843",
            "self": false,
            "source_security_group_id": "sg-0987b452d0db59690",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.ec2_webserver.aws_security_group.webserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-0414447227cdd0e65",
            "description": "allow traffic from port 80/443 appserver elb \u0026 allow all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0414447227cdd0e65",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from app server ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9f3a28a0645e6cb"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from public ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09de2cc5cfe6886d1"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from app server ELB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9f3a28a0645e6cb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from public ELB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09de2cc5cfe6886d1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "appserver_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserver_sg"
            },
            "tags_all": {
              "Name": "appserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to internet",
            "from_port": 0,
            "id": "sgrule-3281249661",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0414447227cdd0e65",
            "security_group_rule_id": "sgr-00b5b185345029302",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_app_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from app server ELB",
            "from_port": 443,
            "id": "sgrule-662044084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0414447227cdd0e65",
            "security_group_rule_id": "sgr-0d34f2c669f03e6b0",
            "self": false,
            "source_security_group_id": "sg-0f9f3a28a0645e6cb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_app_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from app server ELB",
            "from_port": 80,
            "id": "sgrule-3652375365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0414447227cdd0e65",
            "security_group_rule_id": "sgr-0ba90704b940eb509",
            "self": false,
            "source_security_group_id": "sg-0f9f3a28a0645e6cb",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.appserver_elb.aws_security_group.appserver_elb_sg",
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from public ELB",
            "from_port": 443,
            "id": "sgrule-3776284971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0414447227cdd0e65",
            "security_group_rule_id": "sgr-0e9c722d0bd068285",
            "self": false,
            "source_security_group_id": "sg-09de2cc5cfe6886d1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_appserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from public ELB",
            "from_port": 80,
            "id": "sgrule-533899226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0414447227cdd0e65",
            "security_group_rule_id": "sgr-0905f8d062bbdeb7b",
            "self": false,
            "source_security_group_id": "sg-09de2cc5cfe6886d1",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_appserver.aws_security_group.appserver_sg",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-0987b452d0db59690",
            "description": "allow traffic from port 80 \u0026 allow all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0987b452d0db59690",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from public ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09de2cc5cfe6886d1"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from public ELB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09de2cc5cfe6886d1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_sg"
            },
            "tags_all": {
              "Name": "webserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_webserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to internet",
            "from_port": 0,
            "id": "sgrule-1482651712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0987b452d0db59690",
            "security_group_rule_id": "sgr-0bccd8370a6ba036a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_webserver.aws_security_group.webserver_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_webserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from public ELB",
            "from_port": 443,
            "id": "sgrule-1302996178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0987b452d0db59690",
            "security_group_rule_id": "sgr-0c0f46fde12d7b9a6",
            "self": false,
            "source_security_group_id": "sg-09de2cc5cfe6886d1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_webserver.aws_security_group.webserver_sg",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_webserver",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from public ELB",
            "from_port": 80,
            "id": "sgrule-4253646936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0987b452d0db59690",
            "security_group_rule_id": "sgr-06c652f9c68a3a89f",
            "self": false,
            "source_security_group_id": "sg-09de2cc5cfe6886d1",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_webserver.aws_security_group.webserver_sg",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/99cc85a8fe84b37d",
            "arn_suffix": "app/frontend-lb/99cc85a8fe84b37d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-lb-1855407254.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/99cc85a8fe84b37d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09de2cc5cfe6886d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f8affc3903bdd90"
              },
              {
                "subnet_id": "subnet-0e26babe84109837d"
              }
            ],
            "subnets": [
              "subnet-01f8affc3903bdd90",
              "subnet-0e26babe84109837d"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-051d33c1a610f8534",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_subnet.cloudforce_publicB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/99cc85a8fe84b37d/fcc104816df7ba35",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/48a2fa23c479896d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/99cc85a8fe84b37d/fcc104816df7ba35",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/99cc85a8fe84b37d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_elb.aws_lb.frontend_lb",
            "module.public_elb.aws_lb_target_group.frontendTG",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_subnet.cloudforce_publicB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontendTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/48a2fa23c479896d",
            "arn_suffix": "targetgroup/frontendTG/48a2fa23c479896d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/48a2fa23c479896d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/99cc85a8fe84b37d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontendTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-09de2cc5cfe6886d1",
            "description": "Allow traffic from the internet \u0026 allow all outgoing traffic to webservers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound HTTPS traffic to web servers",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0987b452d0db59690"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-09de2cc5cfe6886d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_elb_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_elb_sg"
            },
            "tags_all": {
              "Name": "web_elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_webelb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1180472035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-3b927c52"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-09de2cc5cfe6886d1",
            "security_group_rule_id": "sgr-093aaa9f929e556e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.public_elb.data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_https_to_web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound HTTPS traffic to web servers",
            "from_port": 80,
            "id": "sgrule-3368096496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09de2cc5cfe6886d1",
            "security_group_rule_id": "sgr-0f03a0e4e63c46628",
            "self": false,
            "source_security_group_id": "sg-0987b452d0db59690",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_webserver.aws_security_group.webserver_sg",
            "module.public_elb.aws_security_group.web_elb_sg",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloud_natgateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07215fb78c391ca65",
            "arn": "arn:aws:ec2:us-east-1:689587120140:elastic-ip/eipalloc-07215fb78c391ca65",
            "association_id": "eipassoc-03749c2553c6fd987",
            "domain": "vpc",
            "id": "eipalloc-07215fb78c391ca65",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a38a23964b4d8def",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-54-88-45-135.compute-1.amazonaws.com",
            "public_ip": "54.88.45.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudforce_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:internet-gateway/igw-0012678b606d10512",
            "id": "igw-0012678b606d10512",
            "owner_id": "689587120140",
            "tags": {
              "Name": "cloudforce_igw"
            },
            "tags_all": {
              "Name": "cloudforce_igw"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07215fb78c391ca65",
            "association_id": "eipassoc-03749c2553c6fd987",
            "connectivity_type": "public",
            "id": "nat-0f8afc33d9a8f5f06",
            "network_interface_id": "eni-0a38a23964b4d8def",
            "private_ip": "10.0.1.67",
            "public_ip": "54.88.45.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f8affc3903bdd90",
            "tags": {
              "Name": "NAT gateway 1"
            },
            "tags_all": {
              "Name": "NAT gateway 1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudforce_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0012678b606d10512",
            "id": "r-rtb-0a46c6b7bd60657701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a46c6b7bd6065770",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudforce_igw",
            "module.vpc.aws_route_table.cloudforce_rtb_public",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_Gateway_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:route-table/rtb-05b43fc54276a6f08",
            "id": "rtb-05b43fc54276a6f08",
            "owner_id": "689587120140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8afc33d9a8f5f06",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_nat_gateway.cloudNAT",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudforce_rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:route-table/rtb-0a46c6b7bd6065770",
            "id": "rtb-0a46c6b7bd6065770",
            "owner_id": "689587120140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0012678b606d10512",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudforce_rtb_public"
            },
            "tags_all": {
              "Name": "cloudforce_rtb_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02213cb60b90dd522",
            "route_table_id": "rtb-05b43fc54276a6f08",
            "subnet_id": "subnet-0ddee619789c4da7d"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_nat_gateway.cloudNAT",
            "module.vpc.aws_route_table.NAT_Gateway_RT",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_subnet.cloudforce_privateC",
            "module.vpc.aws_subnet.cloudforce_privateD",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0685ad93b44d064eb",
            "route_table_id": "rtb-05b43fc54276a6f08",
            "subnet_id": "subnet-0f907c72667c5de1b"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_nat_gateway.cloudNAT",
            "module.vpc.aws_route_table.NAT_Gateway_RT",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_subnet.cloudforce_privateC",
            "module.vpc.aws_subnet.cloudforce_privateD",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff37fa0c8f110fa3",
            "route_table_id": "rtb-05b43fc54276a6f08",
            "subnet_id": "subnet-04aa517d19756a44e"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_nat_gateway.cloudNAT",
            "module.vpc.aws_route_table.NAT_Gateway_RT",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_subnet.cloudforce_privateC",
            "module.vpc.aws_subnet.cloudforce_privateD",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a1f63b7ebaf853e",
            "route_table_id": "rtb-05b43fc54276a6f08",
            "subnet_id": "subnet-05b9a49c735e56e53"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloud_natgateway_eip",
            "module.vpc.aws_nat_gateway.cloudNAT",
            "module.vpc.aws_route_table.NAT_Gateway_RT",
            "module.vpc.aws_subnet.cloudforce_privateA",
            "module.vpc.aws_subnet.cloudforce_privateB",
            "module.vpc.aws_subnet.cloudforce_privateC",
            "module.vpc.aws_subnet.cloudforce_privateD",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d4556082161f32",
            "route_table_id": "rtb-0a46c6b7bd6065770",
            "subnet_id": "subnet-01f8affc3903bdd90"
          },
          "dependencies": [
            "module.vpc.aws_route_table.cloudforce_rtb_public",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_subnet.cloudforce_publicB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040cf22e5a7022716",
            "route_table_id": "rtb-0a46c6b7bd6065770",
            "subnet_id": "subnet-0e26babe84109837d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.cloudforce_rtb_public",
            "module.vpc.aws_subnet.cloudforce_publicA",
            "module.vpc.aws_subnet.cloudforce_publicB",
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_privateA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-0ddee619789c4da7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddee619789c4da7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_privateA"
            },
            "tags_all": {
              "Name": "cloudforce_privateA"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_privateB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-0f907c72667c5de1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f907c72667c5de1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_privateB"
            },
            "tags_all": {
              "Name": "cloudforce_privateB"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_privateC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-04aa517d19756a44e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aa517d19756a44e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_privateC"
            },
            "tags_all": {
              "Name": "cloudforce_privateC"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_privateD",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-05b9a49c735e56e53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b9a49c735e56e53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_privateD"
            },
            "tags_all": {
              "Name": "cloudforce_privateD"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-01f8affc3903bdd90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f8affc3903bdd90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_publicA"
            },
            "tags_all": {
              "Name": "cloudforce_publicA"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-0e26babe84109837d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e26babe84109837d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_publicB"
            },
            "tags_all": {
              "Name": "cloudforce_publicB"
            },
            "vpc_id": "vpc-051d33c1a610f8534"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudforce_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:vpc/vpc-051d33c1a610f8534",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055adf5f13483408d",
            "default_route_table_id": "rtb-0c29c5a2cba68d452",
            "default_security_group_id": "sg-0566ec4ed4fbb70f8",
            "dhcp_options_id": "dopt-06ccb9d9cee9df1e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051d33c1a610f8534",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c29c5a2cba68d452",
            "owner_id": "689587120140",
            "tags": {
              "Name": "cloudforce_vpc"
            },
            "tags_all": {
              "Name": "cloudforce_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}